--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,10 @@ image: /root/.oldroot/nfs/install/../images/Ubuntu-1804-bionic-64-minimal.tar.gz
 # Usually you don't need to change this
 bootloader: grub
 
+# You can change this to an URL to automatically add authorized keys
+# to the root user of the installed system
+sshkey_url: false
+
 # Needed to run Docker on XFS; disable setting to false
 # HACK https://github.com/hetzneronline/installimage/pull/8
 xfs_options: "-n ftype=1"
